# mle-training

./: .gitignore  Dockerfile  MLproject  README.md  env.yaml  env.yml  nonstandardcode.py  pyproject.toml
docs/source/: conf.py  index.rst
mlruns/0/: meta.yaml
mlruns/708010962310977285/: meta.yaml
mlruns/708010962310977285/0ccd516e53c84743a0318accb4752fdc/: meta.yaml
mlruns/708010962310977285/10d16cad5d7f4858b49556b9a678eb79/: meta.yaml
mlruns/708010962310977285/156306679d2f452da32265629dbc07dd/: meta.yaml
mlruns/708010962310977285/332e26c18e0d4b74b3c3cbf8e95c27d3/: meta.yaml
mlruns/708010962310977285/3e08c8d380e649768688399135f3428f/: meta.yaml
mlruns/708010962310977285/5ff2aa11850d468a891db599825704a9/: meta.yaml
mlruns/708010962310977285/6c1ec785c2f84e74bc61af66628e4d89/: meta.yaml
mlruns/708010962310977285/6dd386cf66b34442b48942654e8b28f1/: meta.yaml
mlruns/708010962310977285/6ecb7358765342c28f3524383af5160f/: meta.yaml
mlruns/708010962310977285/72248cf06d99428e9b3238fa5373bc7f/: meta.yaml
mlruns/708010962310977285/78f3c0efafb943aa84954ed5658b3f30/: meta.yaml
mlruns/708010962310977285/80162a0915bf440cbf7ac6622da7e982/: meta.yaml
mlruns/708010962310977285/82716bfcaa184d60b5b1b48d0fa84c46/: meta.yaml
mlruns/708010962310977285/85ccbb2f04db422fb2303a40734572e9/: meta.yaml
mlruns/models/final_model/: meta.yaml
notebooks/: Assignment_3.1.1.ipynb  Assignment_3.1.ipynb
src/housing_price/: ingest_data.py  main.py  score.py  train.py
tests/functional/: test_ingest.py
tests/unit_tests/: test_installation.py  test_model.py
(+44 files in other folders)
