[tool.black]
line-length = 88
[tool.isort]
profile = "black"
multi_line_output = 4
[tool.flake8]
max-line-length = 88

[project]
name = "housing_price"
version = "0.4.0"
authors = [
    {name="Sairam Golakoti", mail="sairam.golakoti@tigeranalytics.com"}
]
description = "This Package is to predict the median house price of a locality given the input features"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
"Homepage" = "https://github.com/sairam-golakoti/mle-training"
"Bug Tracker" = "https://github.com/sairam-golakoti/mle-training/issues"